--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
-blinker==1.9.0
-certifi==2025.10.5
-charset-normalizer==3.4.4
-click==8.3.0
-colorama==0.4.6
+# [Web Framework & Server]
 Flask==3.1.2
 flask-cors==6.0.1
-idna==3.11
-itsdangerous==2.2.0
+Werkzeug==3.1.3
 Jinja2==3.1.6
 MarkupSafe==3.0.3
-setuptools==80.9.0
+blinker==1.9.0
+click==8.3.0
+itsdangerous==2.2.0
+
+# [Utility & Environment]
+python-dotenv       # .env 파일 로드용
+colorama==0.4.6     # 터미널 컬러 출력
+certifi==2025.10.5
+charset-normalizer==3.4.4
+idna==3.11
 urllib3==2.5.0
-Werkzeug==3.1.3
-# --- 추가된 라이브러리 ---
-transformers==4.41.2
-accelerate==0.31.0
-peft==0.11.1
-trl==0.9.3
-datasets==2.20.0
-torch
+setuptools==80.9.0
+
+# [AI & Deep Learning Core]
+torch               # PyTorch (딥러닝 프레임워크)
+transformers        # Hugging Face 모델 로드
+accelerate==0.31.0  # 모델 추론 가속화
+peft==0.11.1        # LoRA 어댑터 로드용 라이브러리
+trl==0.9.3          # Transformer Reinforcement Learning (학습용)
+datasets==2.20.0    # 데이터셋 처리
+
+# [External AI API]
+google-generativeai # Google Gemini API 호출용
